--- a/BreinVanFred/BreinVanFred.cbp
+++ b/BreinVanFred/BreinVanFred.cbp
@@ -50,12 +50,25 @@
 			<Add after="srec_cat $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).fuse -Intel -crop 0x01 0x02 -offset -0x01 -O $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).hfs -Intel " />
 			<Add after="srec_cat $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).fuse -Intel -crop 0x02 0x03 -offset -0x02 -O $(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).efs -Intel " />
 		</ExtraCommands>
+		<Unit filename="IR.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="IR.h" />
 		<Unit filename="fuse.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="main.h" />
+		<Unit filename="stepperDriver.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="stepperDriver.h" />
+		<Unit filename="ultrasoon.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="ultrasoon.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
