--- a/BreinVanFred/BreinVanFred.cbp
+++ b/BreinVanFred/BreinVanFred.cbp
@@ -54,13 +54,13 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="IR.h" />
-		<Unit filename="display.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="display.h" />
 		<Unit filename="fuse.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="interface.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="interface.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
